chore: update openapi api client
